Put a joined walk's accumulator at the outer step's type
Joining two walks moved the outer step to where the inner step adds,
and rebuilt the rest of the inner step with the types it was checked
with. The step kept the inner accumulator's type, the fork and bindings
around the moved step kept answering the list in between, and the
accumulator reached the outer step under a Widen the checker never
decided.

The join is now a growth answers() walks with, like an append or an
insert. The answering positions it passes through answer what the outer
step answers, and every name for the accumulator is read and bound at
the outer step's accumulator type, under the same binding. A read of
the accumulator outside those positions refuses the join.

The body handed to the backend is now held to the slot rule checked
trees are held to, and to a rule that each read is of the type its
binding is in force at.

Closes #1927

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>